# Agents

./: .gitignore  RAG优化建议.md  README.md  developPaln.md  order_chain原理与流程.md  plan.md  pyproject.toml  start.md  system_flow.md  开发文档.md  需求文档.md
RAG/: .env.example  config.py  doc_parser.py  embedding.py  es_store.py  main.py  qdrant_store.py  query_bm25.py  query_rules.py  requirements.txt
backend/: .env  .env.example  README.md  SearchAgent说明.md  requirements.txt  status.md  上下文管理说明.md  会话历史改造说明.md  订单结构与校验标准化改造计划.md
backend/app/: deps.py  main.py
backend/app/agents/: intent_router.py  order_agent.py  query_display.py  rag_agent.py  search_agent.py  summarizer_agent.py  task_injectors.py
backend/app/api/: compat.py
backend/app/chains/: order_chain.py  order_field_config.py  order_validation.py  order_validators.py
backend/app/core/: conversation_context.py  llm_provider.py  orchestrator.py  session_memory.py  session_meta.py  session_meta_reply.py  session_store.py  settings.py  state.py  step_dag.py
backend/app/db_access/: __init__.py  catalog.py  (+4 more)
backend/scripts/: benchmark_intent_prompt_latency.py  e2e_search_order_flow.py  llm_test_out.txt  quick_rag_test.py  selftest_two_turns.py  smoke_session_memory.py  smoke_user_queries.py  test_intent_llm_output.py
backend/tests/: test_intent_depends_string.py  test_scoped_executor_escape.py  test_sql_query_tool_escape.py  test_sql_window_reject.py  test_step_dag.py  test_turn_stepref_scenarios.py
frontend-copy/: .env.example  .gitignore  index.html  package-lock.json
frontend-copy/src/: App.tsx  index.css
(+26 files in other folders)
