[project]
name = "aicode-assistant"
version = "0.1.0"
description = "Agent + RAG customer support assistant (demo Phase 0)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "typer>=0.12",
  "chromadb>=0.5.0",
  "pypdf>=5.0.0",
  "langgraph>=0.2,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-openai>=0.2,<0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
assistant = "assistant.cli:app"

[tool.uvicorn]
# (reserved)

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

